# mistral-test

./: Cargo.toml  README.md
configs/: sample_config.toml
src/: main.rs
src/rag/: embedding.rs  mod.rs  query.rs
