[package]
name = "mistral-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"], tag = "v0.6.0" } # Running on mac
reqwest = "0.12.22"
tokio = { version = "1.40.0", features = ["full"] }
