[package]
name = "mistral-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"], tag = "v0.6.0" } # Running on mac
candle-transformers = { git = "https://github.com/EricLBuehler/candle.git", rev = "e8209f", features = ["metal"] }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", rev = "e8209f", features = ["metal"] }
candle-core = { git = "https://github.com/EricLBuehler/candle.git", rev = "e8209f", features = ["metal"] }

reqwest = "0.12.22"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
hf-hub = "0.4.3"
clap = "4.5.40"
log = "0.4.27"
serde = "1.0.219"
log4rs = "1.3.0"
toml = "0.8.23"
